--- a/docker/services/frontend/html/config-patterns.html
+++ b/docker/services/frontend/html/config-patterns.html
@@ -957,7 +957,7 @@
             },
             'bullish_engulfing': {
                 name: 'Bullish Engulfing',
-                description: 'Grosse grüne Kerze, die die vorherige rote Kerze vollständig umschliesst.',
+                description: 'Grösse grüne Kerze, die die vorherige rote Kerze vollständig umschliesst.',
                 implication: 'Starkes bullisches Umkehrsignal. Käufer dominieren den Markt.'
             },
             'morning_star': {
@@ -989,7 +989,7 @@
             },
             'bearish_engulfing': {
                 name: 'Bearish Engulfing',
-                description: 'Grosse rote Kerze, die die vorherige grüne Kerze vollständig umschliesst.',
+                description: 'Grösse rote Kerze, die die vorherige grüne Kerze vollständig umschliesst.',
                 implication: 'Starkes bärisches Umkehrsignal. Verkäufer dominieren.'
             },
             'evening_star': {
