--- a/docker/services/frontend/html/config-tcn.html
+++ b/docker/services/frontend/html/config-tcn.html
@@ -507,7 +507,7 @@
 
         <!-- Tabs -->
         <div class="tabs">
-            <button class="tab-btn active" onclick="showTab('overview')">&#128200; Ubersicht</button>
+            <button class="tab-btn active" onclick="showTab('overview')">&#128200; Übersicht</button>
             <button class="tab-btn" onclick="showTab('detection')">&#128269; Pattern-Erkennung</button>
             <button class="tab-btn" onclick="showTab('training')">&#9881; Training</button>
             <button class="tab-btn" onclick="showTab('history')">&#128203; Verlauf</button>
@@ -619,7 +619,7 @@
                         <h3 class="card-title">&#128295; Training starten</h3>
                     </div>
                     <div class="form-group">
-                        <label>Symbole (fur Training) <span id="symbols-count" style="color: #888; font-weight: normal;"></span></label>
+                        <label>Symbole (für Training) <span id="symbols-count" style="color: #888; font-weight: normal;"></span></label>
                         <select class="form-control" id="train-symbols" multiple style="height: 150px;">
                             <option disabled>Lade Symbole...</option>
                         </select>
@@ -627,7 +627,7 @@
                             <button type="button" class="btn btn-secondary" onclick="selectAllSymbols()" style="flex: 1; padding: 0.3rem;">Alle</button>
                             <button type="button" class="btn btn-secondary" onclick="selectNoSymbols()" style="flex: 1; padding: 0.3rem;">Keine</button>
                         </div>
-                        <small style="color: #888;">Ctrl+Klick fur Mehrfachauswahl</small>
+                        <small style="color: #888;">Ctrl+Klick für Mehrfachauswahl</small>
                     </div>
                     <div class="form-group">
                         <label>Timeframe</label>
@@ -673,7 +673,7 @@
             <!-- Available Models -->
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">&#128230; Verfugbare Modelle</h3>
+                    <h3 class="card-title">&#128230; Verfügbare Modelle</h3>
                     <button class="btn btn-secondary btn-sm" onclick="loadModels()">&#8635; Aktualisieren</button>
                 </div>
                 <div id="models-list">
@@ -742,7 +742,7 @@
                     </div>
                 </div>
                 <div id="pattern-history">
-                    <div class="info-box">Wahlen Sie ein Symbol und klicken Sie auf "Laden".</div>
+                    <div class="info-box">Wählen Sie ein Symbol und klicken Sie auf "Laden".</div>
                 </div>
             </div>
         </div>
@@ -844,7 +844,7 @@
                         </div>
                         <div style="text-align: center; padding: 1rem; background: rgba(255,255,255,0.03); border-radius: 8px;">
                             <div style="font-size: 1.5rem; color: #a78bfa;">${stats.available_models || 0}</div>
-                            <div style="color: #888; font-size: 0.85rem;">Verfugbare Modelle</div>
+                            <div style="color: #888; font-size: 0.85rem;">Verfügbare Modelle</div>
                         </div>
                     </div>
                 `;
@@ -889,7 +889,7 @@
                     result.innerHTML = '<div class="detection-result" style="color: #888; text-align: center;">Keine Pattern erkannt</div>';
                 }
 
-                showToast(`Pattern-Erkennung fur ${symbol} abgeschlossen`);
+                showToast(`Pattern-Erkennung für ${symbol} abgeschlossen`);
             } catch (error) {
                 showToast('Fehler bei der Pattern-Erkennung', 'error');
                 console.error(error);
@@ -979,7 +979,7 @@
                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.75rem;">
                                 <span style="color: #4caf50; font-weight: 600; display: flex; align-items: center; gap: 0.5rem;">
                                     <span class="spinner" style="width: 16px; height: 16px; border-width: 2px;"></span>
-                                    Training lauft...
+                                    Training läuft...
                                 </span>
                                 <span style="background: #4caf50; color: #000; padding: 0.2rem 0.5rem; border-radius: 4px; font-size: 0.8rem; font-weight: 600;">
                                     ${progressPercent}%
@@ -1036,7 +1036,7 @@
                 const symbolSelect = document.getElementById('train-symbols');
                 const symbols = Array.from(symbolSelect.selectedOptions).map(o => o.value);
                 if (symbols.length === 0) {
-                    showToast('Bitte mindestens ein Symbol auswahlen', 'error');
+                    showToast('Bitte mindestens ein Symbol auswählen', 'error');
                     btn.classList.remove('btn-loading');
                     btn.disabled = false;
                     return;
@@ -1153,7 +1153,7 @@
 
                     container.innerHTML = `
                         <div style="margin-bottom: 0.5rem; color: #888; font-size: 0.85rem;">
-                            ${data.count} Modell${data.count !== 1 ? 'e' : ''} verfugbar
+                            ${data.count} Modell${data.count !== 1 ? 'e' : ''} verfügbar
                         </div>
                         ${sortedModels.map((m, idx) => `
                             <div style="display: flex; justify-content: space-between; align-items: center; padding: 0.75rem; background: ${idx === 0 ? 'rgba(76,175,80,0.1)' : 'rgba(255,255,255,0.03)'}; border: 1px solid ${idx === 0 ? 'rgba(76,175,80,0.3)' : 'rgba(255,255,255,0.05)'}; border-radius: 6px; margin-bottom: 0.5rem;">
@@ -1243,7 +1243,7 @@
                         </table>
                     `;
                 } else {
-                    container.innerHTML = '<div class="info-box">Keine Pattern-Historie fur dieses Symbol.</div>';
+                    container.innerHTML = '<div class="info-box">Keine Pattern-Historie für dieses Symbol.</div>';
                 }
             } catch (error) {
                 container.innerHTML = '<div class="info-box" style="border-color: rgba(244,67,54,0.3); color: #e57373;">Fehler beim Laden der Historie.</div>';
@@ -1291,7 +1291,7 @@
                     select.lastElementChild.appendChild(option);
                 });
 
-                countSpan.textContent = `(${symbols.length} verfugbar)`;
+                countSpan.textContent = `(${symbols.length} verfügbar)`;
 
             } catch (error) {
                 console.error('Error loading symbols:', error);
@@ -1373,13 +1373,13 @@
                             <div style="color: #fff; font-weight: 600;">${lastRun}</div>
                         </div>
                         <div style="background: rgba(255,255,255,0.03); padding: 0.5rem; border-radius: 4px;">
-                            <div style="color: #888;">Nachster Lauf</div>
+                            <div style="color: #888;">Nächster Lauf</div>
                             <div style="color: #fff; font-weight: 600;">${nextRun}</div>
                         </div>
                     </div>
                     ${data.current_training ? `
                         <div style="margin-top: 0.75rem; padding: 0.5rem; background: rgba(100,200,255,0.1); border: 1px solid rgba(100,200,255,0.3); border-radius: 4px;">
-                            <div style="color: #64c8ff; font-weight: 600;">Training lauft...</div>
+                            <div style="color: #64c8ff; font-weight: 600;">Training läuft...</div>
                             <div style="font-size: 0.8rem; color: #888; margin-top: 0.25rem;">
                                 ${data.current_training.symbols?.length || 0} Symbole,
                                 ${data.current_training.completed_timeframes?.length || 0}/${data.current_training.timeframes?.length || 0} Timeframes
@@ -1408,7 +1408,7 @@
                 loadAutoTrainingStatus();
 
             } catch (error) {
-                showToast('Fehler beim Andern des Auto-Training Status', 'error');
+                showToast('Fehler beim Ändern des Auto-Training Status', 'error');
                 console.error(error);
             }
         }
@@ -1463,7 +1463,7 @@
                     throw new Error(errData.detail || 'Failed to start auto-training');
                 }
 
-                showToast('Auto-Training fur alle Symbole gestartet');
+                showToast('Auto-Training für alle Symbole gestartet');
                 loadAutoTrainingStatus();
                 loadTrainingStatus();
 
